# PHD_based_relative_localization

./: README.md
lidarScan_robot_extractor/: CMakeLists.txt  lidar.rviz  package.xml
lidarScan_robot_extractor/launch/: robot_extractor_gazebo.launch
lidarScan_robot_extractor/src/: blindspots_for_robots_in_lidar.cpp  lidarScan_robot_extractor.cpp  lidarScan_robot_extractor_node.cpp
phd_filter_extension/: CMakeLists.txt  package.xml
phd_filter_extension/launch/: filter_parameters.yaml  plotter.launch  simulation_5_robots_camera_lidar_filter_blindspot.launch  simulation_5_robs_with_cam_lidar_PHD_extention copy.launch  simulation_5_robs_with_cam_lidar_Standard_PHD.launch
phd_filter_extension/rviz_config_files/: gazebo_sim.rviz
phd_filter_extension/scripts/: offline_data_plotter.ipynb  plotter_results.py  seperate_results_plots.py
phd_filter_extension/src/: filter.cpp  phd_filter_extension_node.cpp
phd_filter_extension/srv/: blindspotServiceMsg.srv
robot_gazebo_simulation/: CMakeLists.txt  package.xml  simulation.rviz
robot_gazebo_simulation/launch/: five_robots_inside_arena.launch  five_robots_inside_arena_no_motion.launch  single_differential_drive.launch
robot_gazebo_simulation/script/: color_extraction.py  unicycle_avoidance_random.py
robot_gazebo_simulation/urdf/: cam.urdf.xacro  differential_drive_base.urdf.xacro  differential_drive_cam_lidar_fisheyes.xacro  fisheyes.urdf.xacro  wheel.urdf.xacro  ydlidar.urdf.xacro
robot_gazebo_simulation/world/: arena.world
utility_functions/: CMakeLists.txt  package.xml
(+7 files in other folders)
